# harc_bench

./: Cargo.toml  README.md
src/: main.rs
src/ray_tracer/: mod.rs
src/ray_tracer/camera/: mod.rs  util.rs
src/ray_tracer/common/: buffer.rs  extra.rs  mod.rs
src/ray_tracer/common/export/: mod.rs
src/ray_tracer/common/vec3/: mod.rs  operator.rs  random.rs  structs.rs
src/ray_tracer/export/: mod.rs  pixel.rs
src/ray_tracer/material/: mod.rs  traits.rs
src/ray_tracer/material/classification/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/ray_tracer/object/: sphere.rs
src/ray_tracer/render/: mod.rs
src/ray_tracer/render/hit/: hit_record.rs  hittable_list.rs  mod.rs  traits.rs
src/ray_tracer/render/ray/: structs.rs  utils.rs
src/ray_tracer/scene/: example_1.rs  mod.rs
