[package]
name = "harc_bench"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"
image = "0.24.6"
indicatif = "0.17.5"
tokio = { version = "1.29.1", features = ["full"] }
minifb = "0.25.0"
